examples/type_system/failing/31_direct_time_builtin_missing_effect.flx
// parity-expected-stdout-begin
// parity-expected-stdout-end
// expect: compile_error

// E400: direct Time builtin call inside function with incompatible ambient effects.

fn bad_clock() -> Int with IO {
    now_ms()
}

fn main() -> Unit with IO {
    bad_clock();
}
